--- a/assets/style.css
+++ b/assets/style.css
@@ -178,7 +178,7 @@ body {
   padding: 0px 0px 0px 9px;
 }
 /*Кнопка селектора*/
-select {
+/* select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -197,9 +197,9 @@ select {
     2.1em 2.3em;
   background-repeat: no-repeat;
   outline: none;
-}
+} */
 /*Кнопка селектора при нажатии*/
-select:focus {
+/* select:focus {
   background-image:
     linear-gradient(45deg, #b8aba5, #170d0a 50%, transparent 50%),
     linear-gradient(135deg, transparent 50%, #170d0a 40%, #b8aba5),
@@ -215,7 +215,7 @@ select:focus {
   background-repeat: no-repeat;
   border-color: black;
   outline: 0;
-}
+} */
 
 /*Кнопка отправить заявку*/
 #submit__request1 {
@@ -247,29 +247,45 @@ select:focus {
   	color: #000;
       border: 1px solid #cd8e31;
   	font-size: 12px;
-    width: 310px;
-    height: 32px;
+    max-width: 308px;
+    min-height: 32px;
   	cursor: pointer;
     text-align: left;
+    padding-left: 10px;
+    padding-top: 5px;
+    position: relative;
   }
 
-  .on.select__gap,
+  /* .on.select__gap,
   .select__gap:hover {
     color: #55493f;
-  }
+  } */
+  /* .select__gap:hover {
+    background-color: #d8af75;
+  } */
 
   .select__list {
-  	background: transparent;
+  	background: #fcebc6;
       border: 1px solid #cd8e31;
-  	margin: 0px 5px 0 7px;
+  	margin: -15px 5px 0 7px;
+    max-width: 308px;
+    position: absolute;
   }
 
   .select__list.on {
   	display: block;
   }
-
-   .select__item span {
-    padding: 0px 12px 0 12px;
+  li.select__item {
+    height: 32px;
+    text-align: left;
+    font-size: 12px;
+    padding-top: 6px;
+  }
+  li.select__item:hover {
+    background-color: #d8af75;
+  }
+  .select__item span {
+    padding: 0px 12px 0 10px;
   	cursor: pointer;
       color: #45250a;
       text-align: left;
@@ -277,33 +293,26 @@ select:focus {
 
   .select__item.selected,
   .select__item span:hover {
-  	color: #467797;
+  	background-color: #d8af75;
   }
 
+   .select__gap {
+    background-image:
+      linear-gradient(45deg, transparent 50%, #170d0a 40%, #b8aba5),
+      linear-gradient(135deg, #b8aba5, #170d0a 50%, transparent 50%),
+      linear-gradient(#f8e8be, #d99d42, #f8e8be);
+    background-position:
+      calc(100% - 12px) calc(1em + -2px),
+      calc(100% - 2px) calc(1em + -2px),
+      100% 0;
+    background-size:
+      10px 10px,
+      10px 10px,
+      2.1em 2.5em;
+    background-repeat: no-repeat;
+    outline: none;
+  }
   .select__gap:after {
-  	content: '';
-  	display: block;
-  	width: 10px;
-  	height: 10px;
-  	position: absolute;
-  	right: 15px;
-  	top: 50%;
-  	margin-top: -7px;
-  	border-left: 7px solid transparent;
-  	border-right: 7px solid transparent;
-  	border-top: 14px solid #000;
-
-  	-webkit-transition: all .27s ease-in-out;
-  	     -o-transition: all .27s ease-in-out;
-  	        transition: all .27s ease-in-out;
-
-  	-webkit-transform: rotate(0deg);
-  	    -ms-transform: rotate(0deg);
-  	     -o-transform: rotate(0deg);
-  	        transform: rotate(0deg);
-  }
-
-  .on.select__gap:after {
   	-webkit-transform: rotate(180deg);
   	    -ms-transform: rotate(180deg);
   	     -o-transform: rotate(180deg);
