--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,6 @@ body {
   margin: 0;
   font-family: Verdana,Tahoma,Arial, sans-serif;
   display: table;
-  width: 100%;
   line-height: 1.6;
   font-size: 14px;
   color: #f8f6f4;
@@ -62,6 +61,7 @@ body {
   padding-right: 22px;
   list-style: none;
   text-align: right;
+  position: relative;
 }
 /*Стиль кнопки оставить заявку*/
 .btn__request {
@@ -79,6 +79,7 @@ body {
   margin-top: 7px;
   margin-bottom: 7px;
   outline: none;
+  position: relative;
 }
 /*При наведении на кнопку оставить заявку*/
 .btn__request:hover {
@@ -89,6 +90,10 @@ body {
 /*Дропменю оставить заявку*/
 .dropdown__content1 {
   display: none;
+  position: fixed;
+  right: 244px;
+  z-index: 800;
+  width: 320px;
 }
 .dropdown__content1.open {
   display: block;
@@ -107,7 +112,7 @@ body {
 .request1 {
   background: rgba(255, 255, 255, 0.8);
   border: 1px solid #b77d29;
-  width: 324px;
+  width: 320px;
 }
 /*Рамки поля ФИО*/
 #username1 {
@@ -155,17 +160,11 @@ body {
   font-family: Verdana;
   letter-spacing: -1px;
 }
-/*Рамки для поля Допинфо*/
-.additionalinfo {
-  width: 308px;
-  min-height: 74px;
-  font-family: Verdana;
-}
 /*Поле ввода Доп.Инфо*/
 #additionalinfo1 {
   min-width: 308px;
   height: 74px;
-  margin: 12px 7px 12px 7px;
+  margin: 0 7px 20px 7px;
 
   border: 1px solid #b77d29;
   border-radius: 1px;
@@ -174,9 +173,9 @@ body {
   padding: 7px 0px 0px 11px;
 }
 /*Поля-селекторы должности и графика работы*/
-.profession, .schedule {
+/* .profession, .schedule {
   padding: 0px 0px 0px 9px;
-}
+} */
 /*Кнопка селектора*/
 /* select {
   -webkit-appearance: none;
@@ -256,24 +255,18 @@ body {
     position: relative;
   }
 
-  /* .on.select__gap,
-  .select__gap:hover {
-    color: #55493f;
-  } */
-  /* .select__gap:hover {
-    background-color: #d8af75;
-  } */
-
   .select__list {
   	background: #fcebc6;
       border: 1px solid #cd8e31;
   	margin: -15px 5px 0 7px;
     max-width: 308px;
     position: absolute;
+    z-index: 1000;
   }
 
   .select__list.on {
   	display: block;
+    z-index: 1000;
   }
   li.select__item {
     height: 32px;
@@ -296,7 +289,7 @@ body {
   	background-color: #d8af75;
   }
 
-   .select__gap {
+  .select__gap {
     background-image:
       linear-gradient(45deg, transparent 50%, #170d0a 40%, #b8aba5),
       linear-gradient(135deg, #b8aba5, #170d0a 50%, transparent 50%),
@@ -331,6 +324,7 @@ body {
   width: 175px;
   height: 20px;
   outline: none;
+  position: relative;
 }
 /*При наведении на кнопку*/
 .btn__sendcv:hover {
@@ -339,9 +333,12 @@ body {
   cursor: pointer;
 }
 /*При нажатии на кнопку*/
-.btn_sendcv.open {
+.btn__sendcv.open {
   background: linear-gradient(#f5dbb8, #b3751c, #7b470b);
   color: #fff;
+}
+.dropdown__content2.open {
+  display: block;
 }
 /*Поле ФИО для оставить резюме*/
 #username2 {
@@ -368,6 +365,13 @@ body {
   padding: 0px 0px 0px 9px;
 }
 /*Рамки дропменю для отправить резюме*/
+.dropdown__content2 {
+  display: none;
+  position: fixed;
+  right: 244px;
+  z-index: 800;
+  width: 320px;
+}
 .dropdown__content2 li, .dropdown__content2 select {
   display: block;
   width: 308px;
@@ -375,5 +379,45 @@ body {
 .sendcv1 {
   background: rgba(255, 255, 255, 0.8);
   border: 1px solid #b77d29;
-  width: 324px;
+  width: 320px;
+}
+#education01 {
+  width: 308px;
+  height: 32px;
+  margin: 0px 7px 12px 7px;
+  border-radius: 1px;
+  border: 1px solid #b77d29;
+
+  font-family: Verdana;
+  letter-spacing: -1px;
+  padding: 0px 0px 0px 9px;
+}
+#attachcv {
+  width: 308px;
+  height: 32px;
+  margin: 0px 7px 26px 7px;
+  border-radius: 1px;
+  border: 1px solid #b77d29;
+
+  font-family: Verdana;
+  letter-spacing: -1px;
+  padding: 0px 0px 0px 9px;
+}
+#submit__sendcv1 {
+
+  background: #e8c478;
+  color: #f8f6f5;
+  font-family: Arial;
+  font-size: 16px;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 2px black;
+
+  border: 1px;
+  border-radius: 5px;
+  border-color: #f8e8be;
+  background-image: linear-gradient(#f8e8be, #d99d42, #78470b);
+
+  width: 143px;
+  height: 27px;
+  margin: 0px 85px 12px 94px;
 }
