--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,10 @@
-html {
-  width: 1340px;
-}
 body {
   margin: 0;
   font-family: Verdana,Tahoma,Arial, sans-serif;
   display: table;
   line-height: 1.6;
   font-size: 14px;
-  color: #f8f6f4;
+  color: #000;
   width: 1340px;
   background: #fff url("images/backgroundmain1.jpg");
   background-repeat: no-repeat;
@@ -90,8 +87,8 @@ body {
 /*Дропменю оставить заявку*/
 .dropdown__content1 {
   display: none;
-  position: fixed;
-  right: 244px;
+  position: absolute;
+  right: 10%;
   z-index: 800;
   width: 320px;
 }
@@ -304,6 +301,7 @@ body {
       2.1em 2.5em;
     background-repeat: no-repeat;
     outline: none;
+    background-color: #fff;
   }
   .select__gap:after {
   	-webkit-transform: rotate(180deg);
@@ -325,6 +323,7 @@ body {
   height: 20px;
   outline: none;
   position: relative;
+  margin-bottom: 6px;
 }
 /*При наведении на кнопку*/
 .btn__sendcv:hover {
@@ -367,8 +366,8 @@ body {
 /*Рамки дропменю для отправить резюме*/
 .dropdown__content2 {
   display: none;
-  position: fixed;
-  right: 244px;
+  position: absolute;
+  right: 10%;
   z-index: 800;
   width: 320px;
 }
@@ -420,4 +419,10 @@ body {
   width: 143px;
   height: 27px;
   margin: 0px 85px 12px 94px;
+}
+/* Главное меню */
+
+.mainmenu {
+  text-transform: uppercase;
+  background-color: #e0b478;
 }
