search page with a table

--- a/assets/stylesearch.css
+++ b/assets/stylesearch.css
@@ -739,14 +739,12 @@ body {
   background: #4e2c1e;
   height: 45px;
   width: 924px;
-  position: relative;
   right: -224px;
 }
 footer {
   background-image: linear-gradient(#79573d, #a4825c);
   height: 45px;
   width: 924px;
-  position: relative;
   right: -224px;
   color: #fff;
 }
@@ -789,4 +787,184 @@ footer {
   padding-top: 5px;
   font-family: Garamond;
   text-align: center;
+  margin-bottom: 20px;
+}
+.searchmenu {
+  width: 864px;
+  height: 106px;
+  background: #f6e6d6;
+  margin-left: 30px;
+  border: 1px solid #c8b9ae;
+}
+.searchmenu table {
+  width: 864px;
+  height: 106px;
+}
+.searchmenu tr {
+  height: 50%;
+}
+.searchmenu td {
+  width: 33%;
+  text-align: right;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+input[type='number'] {
+    -moz-appearance: textfield;
+}
+.searchmenu input {
+  height: 70%;
+  width: 10%;
+}
+.select-wrap select {
+  padding: 10px;
+  width: 200px;
+  height: 32px;
+  position: relative;
+}
+
+.select___gap {
+  margin-left: 50px;
+  margin-bottom: 20px;
+  color: #000;
+    border: 1px solid #cd8e31;
+  font-size: 12px;
+  max-width: 200px;;
+  min-height: 80%;
+  cursor: pointer;
+  text-align: left;
+  padding: 5px;
+  position: relative;
+}
+
+.select___list {
+  background: #fcebc6;
+    border: 1px solid #cd8e31;
+    margin: -21px 0px 0 50px;
+  width: 210px;
+  position: absolute;
+  z-index: 1000;
+}
+
+.select___list.on {
+  display: block;
+  z-index: 1000;
+}
+li.select___item {
+  height: 32px;
+  text-align: left;
+  font-size: 12px;
+  padding-top: 6px;
+  list-style: none;
+}
+li.select___item:hover {
+  background-color: #d8af75;
+}
+.select___item span {
+  padding: 0px 12px 0 10px;
+  cursor: pointer;
+    color: #45250a;
+    text-align: left;
+}
+
+.select___item.selected,
+.select___item span:hover {
+  background-color: #d8af75;
+}
+
+.select___gap {
+  background-image:
+    linear-gradient(45deg, transparent 50%, #170d0a 40%, #b8aba5),
+    linear-gradient(135deg, #b8aba5, #170d0a 50%, transparent 50%),
+    linear-gradient(#f8e8be, #d99d42, #f8e8be);
+  background-position:
+    calc(100% - 12px) calc(1em + -2px),
+    calc(100% - 2px) calc(1em + -2px),
+    100% 0;
+  background-size:
+    10px 10px,
+    10px 10px,
+    2.1em 2.5em;
+  background-repeat: no-repeat;
+  outline: none;
+  background-color: #fff;
+}
+.select___gap:after {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+       -o-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+#textr1d1 {
+  text-align: left;
+  padding-left: 50px;
+}
+.experience .agerange {
+  text-align: right;
+  float: right;
+  width: 33%;
+}
+.searchmenu button {
+  cursor: pointer;
+
+  background: #e8c478;
+  color: #4e2c1e;
+  font-family: Arial;
+  font-size: 14px;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 2px black;
+
+  border: 1px;
+  border-radius: 5px;
+  border-color: #f8e8be;
+  background-image: linear-gradient(#fff9e0, #e8c478, #fff9e0);
+
+  width: 143px;
+  height: 26px;
+  margin-right: 45px;
+}
+.searchmenu button:hover {
+  color: #fff;
+  background-image: linear-gradient(#f8e8be, #d99d42, #78470b);
+}
+.showtable {
+  height: 320px;
+  width: 900px;
+}
+.showtable table {
+  margin-left: 24px;
+  margin-right: 0;
+  border: 1px solid #d3a86c;
+}
+.showtable thead {
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: Arial;
+  font-size: 15px;
+  background: #814b04;
+  color: #fff;
+  text-align: center;
+}
+.showtable td {
+  height: 30px;
+}
+.fio {
+  width: 348px;
+}
+.profes {
+  width: 230px;
+  text-align: center;
+}
+.employeeage {
+  width: 142px;
+  text-align: center;
+}
+.employeeexp {
+  width: 160px;
+  text-align: center;
+}
+.every2nd td {
+  outline: 1px solid #d3a86c;
 }
